# rocket-util

./: Cargo.toml
example/: Cargo.toml
example/src/: main.rs
src/: authn.rs  error.rs  health.rs  lib.rs
src/health/: hack.rs
