[workspace]
members = ["example"]

[package]
name = "rocket-util"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
once_cell = "1.7.2"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["sync"] }
