[workspace]
members = ["example"]

[package]
name = "rocket-util"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
once_cell = "1.7.2"
rocket = { git = "https://github.com/MikailBag/Rocket.git", branch = "fork", features = ["json", "tls"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["sync"] }
tracing = "0.1.26"
uuid = { version = "0.8.2", features = ["v4"] }
x509-parser = "0.9.2"
